# YM-CODE

./: .dockerignore  .env  .env.example  .gitignore  AGENT_USAGE.md  BRAND_IDENTITY.md  BUG_REPORT.md  CHANGELOG.md  CLI_USAGE.md  COMPARISON.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  FEATURES_SUMMARY.md  FINAL_REVIEW_CONFIRMATION.md  FIX_REPORT.md  INSTALL.md  LICENSE  LOCAL_TEAM_SETUP.md  MCP_GUIDE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_START.md  README.md  README_BACKEND.md  ROADMAP.md  SECURITY.md  SETUP.md  SKILLS_MARKETPLACE.md  TASKS.md  TEAM_FEATURES.md  TEST_FIX_REPORT_v0.3.4.md  check_models.py  clean_bom.py  cleanup_repo.py  cleanup_tests.py  config.json  demo_cli.py  docker-compose.yml  fix_bytes.py  (+41 more)
backend/: README.md  __init__.py  main.py
configs/: __init__.py  check_team.py  config.yaml  fix_encoding.py  team.json  team_fixed.json  test_api.py  workspaces.json  write_team.py
deprecated/: README_DEPRECATED.md
docs/: A2A-FIX-REPORT.md  A2A-LANGGRAPH-MIGRATION.md  AGENT_CONFIG_UI.md  ALL_MODELS.md  API.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  CLI_SUMMARY.md  CODE_CLEANUP_REPORT.md  COMMIT-REPORT-2026-03-23.md  COMPLETE-REPORT-2026-03-23.md  COMPREHENSIVE_REVIEW.md  DASHBOARD_GUIDE.md  DASHSCOPE_CODING.md  DEBUG_SYSTEM_GUIDE.md  DOCKER_USAGE.md  D_DRIVE_FIX_PLAN.md  D_DRIVE_FIX_REPORT.md  ENGINEERING_IMPROVEMENTS.md  FINAL-ACHIEVEMENT.md  FINAL-COMPLETE-REPORT.md  FINAL-SUMMARY-2026-03-23.md  FINAL-SUMMARY.md  FINAL_TEST_REPORT.md  GAP_ANALYSIS.md  GITHUB_REFRESH_REPORT.md  GIT_CLEANUP_PLAN.md  HOW_TO_CHAT.md  INTEGRATION-COMPLETE.md  INTEGRATION_COMPLETE.md  INTEGRATION_PLAN.md  KNOWLEDGE_SYSTEM_GUIDE.md  LANGGRAPH-ANALYSIS.md  LINGMA_FULL_MODELS.md  LINGMA_MODELS.md  LSP_COMPLETION_SUMMARY.md  MCP_CLIENT_V2_SUMMARY.md  MEMORY_SYSTEM_SUMMARY.md  MISSING_FEATURES_ANALYSIS.md  MODEL_CONFIG_GUIDE.md  (+54 more)
frontend/: __init__.py
plugins/: __init__.py
reports/: BUG_FIX_REPORT.md  CODE_REVIEW_REPORT.md  COMPARISON_ANALYSIS.md  CONFIG_GUIDE.md  CROSS_PLATFORM.md  (+43 more)
(+299 files in other folders)
