[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ym-code"
version = "0.1.0.dev0"
description = "YM-CODE - Next Generation AI Programming Assistant"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "YM-CODE Team", email = "ym-code@example.com"},
    {name = "AI Assistant", email = "ai@example.com"}
]
keywords = ["ai", "agent", "coding", "assistant", "claude-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "prompt-toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
mcp = [
    "mcp>=0.1.0",
]

[project.scripts]
ym-code = "ymcode.cli:main"

[project.urls]
Homepage = "https://github.com/simple-f/YM-CODE"
Documentation = "https://github.com/simple-f/YM-CODE/docs"
Repository = "https://github.com/simple-f/YM-CODE"
Issues = "https://github.com/simple-f/YM-CODE/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ymcode*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
